[package]
name = "apnsmock"
version = "0.1.0"
authors = ["Cibin George <cibin@getblueshift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = { version = "4.0.0-beta.5", features = ["openssl"] }
base64 = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
cadence = "0.23"
once_cell = "1.8.0"
openssl = { version = "0.10", features = ["v110"] }
rand = {version = "0.8.3", features = ["small_rng"]}
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rollbar = { git = "https://github.com/cibingeorge/rollbar-rs" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = {version="1.0.59"}
thiserror = "1.0"
timed = "0.1.5"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-actix-web = "0.3.0-beta.3"
tracing-bunyan-formatter = "0.1.6"
tracing-core = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"]}
uuid = {version = "0.8", features = ["v4"]}
